--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ nav ul li a {
 
 #about .div-img-bg {
   padding-bottom: 30px;
-  border: 20px solid #f7b742;
+  border: 20px solid #fcb533;
 }
 
 #about .div-img-bg .about-img img {
@@ -357,7 +357,7 @@ nav ul li a {
 
 .services-block i {
   font-size: 44px;
-  color: #b8a07e;
+  color: #ee8f12;
   line-height: 44px;
 }
 
