--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,25 @@
 /*  General Styling
 /*-----------------------------------------------------------------------------------*/
 
+.services__modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  z-index: var(--z-modal);
+  opacity: 1;
+  /* visibility: hidden;
+  transition: .3s; */
+}
+
+
+
 body {
   background: #ffffff;
   color: #898989;
